@@ -757,6 +757,7 @@ const short temptable_13[NUMTEMPS_13][2] PROGMEM =
 };
 */
 
+//TODO: Tabelle startet erst bei 92°C ... Kleine Rundungszacken am Anfang, weil alles *4.
 #define NUMTEMPS_13 61 // NTC 3950 100k thermistor - Conrad V3
 const short temptable_13[NUMTEMPS_13][2] PROGMEM =
 {
@@ -769,19 +770,9 @@ const short temptable_13[NUMTEMPS_13][2] PROGMEM =
   {1008*4, 0*8}
 };
 
-// Thermistor NTC 3950 100k Ohm (result seems a bit to cold for my amazon-ntcs)
-#define NUMTEMPS_14 46 
-const short temptable_14[NUMTEMPS_14][2] PROGMEM = {
-    {1*4,8*938}, {31*4,8*314}, {41*4,8*290}, {51*4,8*272}, {61*4,8*258}, {71*4,8*247}, {81*4,8*237}, {91*4,8*229}, {101*4,8*221}, {111*4,8*215}, {121*4,8*209},
-    {131*4,8*204}, {141*4,8*199}, {151*4,8*195}, {161*4,8*190}, {171*4,8*187}, {181*4,8*183}, {191*4,8*179}, {201*4,8*176}, {221*4,8*170}, {241*4,8*165}, 
-    {261*4,8*160}, {281*4,8*155}, {301*4,8*150}, {331*4,8*144}, {361*4,8*139}, {391*4,8*133}, {421*4,8*128}, {451*4,8*123}, {491*4,8*117}, {531*4,8*111}, 
-    {571*4,8*105}, {611*4,8*100}, {681*4,8*90}, {711*4,8*85}, {811*4,8*69}, {831*4,8*65}, {881*4,8*55}, 
-    {901*4,8*51},  {941*4,8*39}, {971*4,8*28}, {981*4,8*23}, {991*4,8*17}, {1001*4,8*9}, {1021*4,8*-27},{1023*4,8*-200}
-};
-
 // Thermistor NTC 3950 100k Ohm (other source)
-#define NUMTEMPS_15 103 
-const short temptable_15[NUMTEMPS_15][2] PROGMEM = {
+#define NUMTEMPS_14 103 
+const short temptable_14[NUMTEMPS_14][2] PROGMEM = {
     {1*4,938*8},{11*4,423*8},{21*4,351*8},{31*4,314*8},{41*4,290*8},{51*4,272*8},{61*4,258*8},{71*4,247*8},\
 {81*4,237*8},{91*4,229*8},{101*4,221*8},{111*4,215*8},{121*4,209*8},{131*4,204*8},{141*4,199*8},{151*4,195*8},\
 {161*4,190*8},{171*4,187*8},{181*4,183*8},{191*4,179*8},{201*4,176*8},{211*4,173*8},{221*4,170*8},{231*4,167*8},\
@@ -794,7 +785,7 @@ const short temptable_15[NUMTEMPS_15][2] PROGMEM = {
 {731*4,82*8},{741*4,81*8},{751*4,79*8},{761*4,77*8},{771*4,76*8},{781*4,74*8},{791*4,72*8},{801*4,71*8},{811*4,69*8},\
 {821*4,67*8},{831*4,65*8},{841*4,63*8},{851*4,62*8},{861*4,60*8},{871*4,57*8},{881*4,55*8},{891*4,53*8},{901*4,51*8},\
 {911*4,48*8},{921*4,45*8},{931*4,42*8},{941*4,39*8},{951*4,36*8},{961*4,32*8},{971*4,28*8},{981*4,23*8},{991*4,17*8},\
-{1001*4,9*8},{1011*4,-1*8},{1021*4,-26*8}   
+{1001*4,9*8},{1011*4,-1*8},{1021*4,-26*8}
 };
 
 
@@ -810,7 +801,7 @@ const short temptable_6[NUM_TEMPS_USERTHERMISTOR1][2] PROGMEM = USER_THERMISTORT
 const short temptable_7[NUM_TEMPS_USERTHERMISTOR2][2] PROGMEM = USER_THERMISTORTABLE2 ;
 #endif // NUM_TEMPS_USERTHERMISTOR2>0
 
-const short * const temptables[15] PROGMEM = {(short int *)&temptable_1[0][0],(short int *)&temptable_2[0][0],(short int *)&temptable_3[0][0],(short int *)&temptable_4[0][0]
+const short * const temptables[14] PROGMEM = {(short int *)&temptable_1[0][0],(short int *)&temptable_2[0][0],(short int *)&temptable_3[0][0],(short int *)&temptable_4[0][0]
 #if NUM_TEMPS_USERTHERMISTOR0>0
         ,(short int *)&temptable_5[0][0]
 #else
@@ -836,10 +827,9 @@ const short * const temptables[15] PROGMEM = {(short int *)&temptable_1[0][0],(s
         ,(short int *)&temptable_12[0][0]
         ,(short int *)&temptable_13[0][0]
         ,(short int *)&temptable_14[0][0]
-        ,(short int *)&temptable_15[0][0]
-                                             };
-const uint8_t temptables_num[15] PROGMEM = {NUMTEMPS_1,NUMTEMPS_2,NUMTEMPS_3,NUMTEMPS_4,NUM_TEMPS_USERTHERMISTOR0,NUM_TEMPS_USERTHERMISTOR1,NUM_TEMPS_USERTHERMISTOR2,NUMTEMPS_8,
-                                 NUMTEMPS_9,NUMTEMPS_10,NUMTEMPS_11,NUMTEMPS_12,NUMTEMPS_13,NUMTEMPS_14,NUMTEMPS_15
+    };
+const uint8_t temptables_num[14] PROGMEM = {NUMTEMPS_1,NUMTEMPS_2,NUMTEMPS_3,NUMTEMPS_4,NUM_TEMPS_USERTHERMISTOR0,NUM_TEMPS_USERTHERMISTOR1,NUM_TEMPS_USERTHERMISTOR2,NUMTEMPS_8,
+                                                NUMTEMPS_9,NUMTEMPS_10,NUMTEMPS_11,NUMTEMPS_12,NUMTEMPS_13,NUMTEMPS_14
                                            };
 
 
@@ -866,7 +856,6 @@ void TemperatureController::updateCurrentTemperature()
         case 12: // 100k RS thermistor 198-961 (4.7k pullup)
         case 13: // NTC 3950 100k thermistor - Conrad V3
         case 14: // Thermistor NTC 3950 100k Ohm
-        case 15: // Thermistor NTC 3950 100k Ohm
         case 97: // Define Raw Thermistor and Restistor-Settings within configuration.h see USE_GENERIC_THERMISTORTABLE_1 and GENERIC_THERM_NUM_ENTRIES 
         case 98: // Define Raw Thermistor and Restistor-Settings within configuration.h see USE_GENERIC_THERMISTORTABLE_2 and GENERIC_THERM_NUM_ENTRIES 
         case 99: // Define Raw Thermistor and Restistor-Settings within configuration.h see USE_GENERIC_THERMISTORTABLE_3 and GENERIC_THERM_NUM_ENTRIES 
@@ -906,9 +895,8 @@ void TemperatureController::updateCurrentTemperature()
         case 10:
         case 11:
         case 12:
-        case 13:
+        case 13: // Conrad V3
         case 14: // Thermistor NTC 3950 100k Ohm
-        case 15: // Thermistor NTC 3950 100k Ohm
         {
             type--;
             uint8_t num = pgm_read_byte(&temptables_num[type])<<1;
@@ -1152,7 +1140,6 @@ void TemperatureController::setTargetTemperature(float target, float offset)
         case 12:
         case 13: // NTC 3950 100k thermistor - Conrad V3
         case 14: // Thermistor NTC 3950 100k Ohm
-        case 15: // Thermistor NTC 3950 100k Ohm
         {
             type--;
             uint8_t num = pgm_read_byte(&temptables_num[type])<<1;
